--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     <li><a href="Curriculum_Vitae/Integrante2.html">Marcos Rubén Ortega Castro</a></li>
                     <li><a href="Curriculum_Vitae/Integrante3.html">Jhosep Daniel Ramos Llano</a></li>
                     <li><a href="Curriculum_Vitae/Integrante4.html">Jose Carlos Ugarte Condori</a></li>
-
-                </ul>
+              </ul>
              </li>
             <li><a href="Proyecto_Innovacion.html">Proyecto de Innovación</a>
                 <ul>
@@ -40,6 +39,12 @@
                     <li><a href="Proyecto_Final/Informe_Final.html">Informe Final: StartUp</a></li>
                 </ul>
             </li>
+            <li><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSVp3vpOBjx1P2joHww1ggflA5Je9NrQBfAsaxZ_qrkvmt-nBXKLbzoGg6hevoosS4QCDjjLM3QLF6B/pubhtml?gid=2133879255&amp;single=true&amp;widget=true&amp;headers=false">Evaluación</a></li>
+                <ul>
+                    <li><a href="evaluacion.html">Evaluaciones: Notas y recomendaciones</a></li>
+          </ul>
+        </li>
+
 		</ul>
 	</nav>
     <header id="header">
@@ -85,8 +90,8 @@
                 <div class="team__item__description">
                     <p class="team__item__description__name">Marco Antonio Apaza Rivera</p>
                     <p class="team__item__description__info">Me gusta escuchar música, cocinar, salir a pasear con mi familia. No soy muy bueno en temas teóricos pero si en la práctica y los taleres, soy muy bueno para socializar cn dempas personas que incluso sean muy desconocidas.</p>
-                    <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
-                    <p class="team__item__description__cal">Rol Secundario: <strong>Coordinador</strong></p>
+                    <p class="team__item__description__cal">Rol principal: <strong>Coordinador</strong></p>
+                    <p class="team__item__description__cal">Rol Secundario: <strong>Comunicador</strong></p>
                     <p class="team__item__description__cal">Numero de Celular: <strong>962685202</strong></p>
                     <a href="mailto:marco.apaza.r@tecsup.edu.pe" class="team__item__description__mail">marco.apaza.r@tecsup.edu.pe</a>
                 </div>
@@ -124,8 +129,8 @@
                     <div class="team__item__description">
                       <p class="team__item__description__name">Jose Carlos Ugarte Condori</p>
                       <p class="team__item__description__info">Me gusta escribir, dibujar, tocar la trompeta, aprender nuevos instrumentos e investigar sobre cosas que pasan en el mundo, me considero hábil para la tecnología ya que suelo aprender los funcionamientos muy rápido, hábil para hablar en público y componer cosas o proyectos aunque no siempre la idea principal las ideo yo, soy bueno organizando a todos para que las ideas funcionen.</p>
-                      <p class="team__item__description__cal">Rol principal: <strong>Coordinador</strong></p>
-                      <p class="team__item__description__cal">Rol Secundario: <strong>Comunicador</strong></p>
+                      <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
+                      <p class="team__item__description__cal">Rol Secundario: <strong>Coordinador</strong></p>
                       <p class="team__item__description__cal">Numero de Celular: <strong>968968449</strong></p>
                       <a href="mailto:jose.ugarte@tecsup.edu.pe" class="team__item__description__mail">jose.ugarte@tecsup.edu.pe</a>
                     </div>
