--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -51,7 +51,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vS5bwFXEwxUblb9tKgvik0KKJH72l3cFU4C7lUx82W5ykdxFcUAnYSszzTQIjgjzQBqLFX80FV2UfvA/pub?embedded=true"height="560" width="560"></iframe>
+                <embed src="ACT1.pdf" type="application/pdf" width="550" height="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -60,9 +60,32 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
                     <p class="think__details__extra__description">En esta ocación desarrollaremos mediante un informe los avances próximos y visiones posibles a lo que se prevee sea nuestro proyecto, en este caso desenvolveremos los puntos más importantes para como ya se ha dicho el "emprendimiento" de nuestro proyecto.</p>
+                  </div>
 
+                                 <div class="think__details__extra">
+                                     <p class="think__details__extra__title">Criterio de evaluación 1</p>
+                                     <p class="think__details__extra__description">Entienden que emprender es cuestión de problemas y capacidades según los casos de estudio.</p>
+                                 </div>
+                                 <div class="think__details__extra">
+                                     <p class="think__details__extra__title">Criterio de evaluación 2</p>
+                                     <p class="think__details__extra__description">Identifican sus capacidades para emprender.</p>
+                                 </div>
+                                 <div class="think__details__extra">
+                                     <p class="think__details__extra__title">Criterio de evaluación 3</p>
+                                     <p class="think__details__extra__description">Planifican el Proceso.</p>
+                                 </div>
+                                 <div class="think__details__extra">
+                                     <p class="think__details__extra__title">Criterio de evaluación 4</p>
+                                     <p class="think__details__extra__description">Entienden que emprender es una actividad en equipo.</p>
+                                 </div>
+                                 <div class="think__details__extra">
+                                     <p class="think__details__extra__title">Criterio de evaluación 5</p>
+                                     <p class="think__details__extra__description">En la creación de equipos se asignan roles principales y secundarios.</p>
+                                     <br>
+                                     Adjuntar el informe completo de la actividad.</p>
+                                     <a
 
-                    <a href="https://drive.google.com/open?id=17PQRy4GsvQxxnFt6SgV46qZgWreUlc7e" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/1vv5rWgv_-qjAr4XeNFHQVqy5yIlQftEH/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
