--- a/Actividades/Actividad2.html
+++ b/Actividades/Actividad2.html
@@ -60,6 +60,22 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
                     <p class="think__details__extra__description">En esta actividad enfocaremos nuestros objetivos a las razones de los problemas, su existencia y el porqué es importante hallar diferentes tipos de problemas existentes en la sociedad, de los cuales uno de los pocos o un grupo pequeño de ellos han sido el causante principal para que nuestro proyecto sea formulado y analizado para ser útil y funcional.</p>
+                  </div>
+                                           <div class="think__details__extra">
+                                     <p class="think__details__extra__title">Criterio de evaluación 1</p>
+                                     <p class="think__details__extra__description">Entienden que las oportunidades para emprender se originan en problemas y oportunidades que forman parte de nuestro día a día</p>
+                                 </div>
+                                 <div class="think__details__extra">
+                                     <p class="think__details__extra__title">Criterio de evaluación 2</p>
+                                     <p class="think__details__extra__description">Observar la realidad con actitud Critica.</p>
+                                 </div>
+                                 <div class="think__details__extra">
+                                     <p class="think__details__extra__title">Criterio de evaluación 3</p>
+                                     <p class="think__details__extra__description">Ser capaces de incorporrar los diferentes trabajos individuales a la visión global del equipo.</p>
+                                 </div>
+                                 <div class="think__details__extra">
+                                     <p class="think__details__extra__title">Criterio de evaluación 4</p>
+                                     <p class="think__details__extra__description">Aplicar como equipo criterios objetivos para la toma de decisiones.</p>
 
                     <a href="https://drive.google.com/open?id=1SbH6hBa41DaSjswadnXcOmVjJ1x8a58KaSwx_ex_WEA" target="_blank">Descargue aquí el informe.</a>
                 </div>
