--- a/Actividades/Actividad5.html
+++ b/Actividades/Actividad5.html
@@ -21,13 +21,12 @@
             <ul class="main-menu" id="main-menu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="">Acerca de nosotros</a>
-                    <ul>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 2</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 3</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 4</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 5</a></li>
-                    </ul>
+                  <ul>
+                    <li><a href="Integrante1.html">Marco Antonio Apaza Rivera</a></li>
+                    <li><a href="Integrante2.html">Marcos Rubén Ortega Castro</a></li>
+                    <li><a href="Integrante3.html">Jhosep Daniel Ramos Llano</a></li>
+                    <li><a href="Integrante4.html">Jose Carlos Ugarte Condori</a></li>
+                  </ul>
                  </li>
                 <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
                     <ul>
