--- a/Actividades/Actividad6.html
+++ b/Actividades/Actividad6.html
@@ -21,13 +21,12 @@
             <ul class="main-menu" id="main-menu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="">Acerca de nosotros</a>
-                    <ul>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 2</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 3</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 4</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 5</a></li>
-                    </ul>
+                  <ul>
+                    <li><a href="Integrante1.html">Marco Antonio Apaza Rivera</a></li>
+                    <li><a href="Integrante2.html">Marcos Rubén Ortega Castro</a></li>
+                    <li><a href="Integrante3.html">Jhosep Daniel Ramos Llano</a></li>
+                    <li><a href="Integrante4.html">Jose Carlos Ugarte Condori</a></li>
+                  </ul>
                  </li>
                 <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
                     <ul>
@@ -52,15 +51,15 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vSzmMyX48l0IhalZr-5avzFabL28s8URUaoASr9Ic0NhPZPbwe2q7rj5ffvh_NJ-k0qRmp3cGTbEN5m/pub?embedded=true"height="560" width="560"></iframe>
-            </div>
+            <embed src="ACT6.pdf" type="application/pdf" width="550" height="600"></embed>
+          </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
-                    <p class="think__details__extra__description">Desarrollar cada criterio de evaluación, si existen imágenes o videos colocarlos en el lado izquierdo de la página referenciando los mismos.</p>
+                    <p class="think__details__extra__description">Este último enfoque nos ayudará a sintetizar el interés de nuestros prontos clientes, nuestra relación estrecha con el mercado y la competencia posible existente así como de los diferentes problemas como mejoras que se pueden realizar bajo las recomendaciones de nuestro públivo quienes son nuestro mayor objetivo.</p>
 
                 </div>
 
@@ -81,7 +80,7 @@
                     <p class="think__details__extra__description">Saber valorar de forma objetiva otras propuesta de valor.</p>
                     <br>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/1Ayi3qi3_-QT9vj9bge99LrxLOIVReWnm/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/141w2AsOv2O80mcKmOr96lx4k5lpYyP5r/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
               </div>
         </div>
