--- a/Actividades/Actividad5.html
+++ b/Actividades/Actividad5.html
@@ -84,7 +84,7 @@
                     <p class="think__details__extra__description">Saber sintetizar los valores y elementos claves del prototipo para utilizarlos como mecanismos de comunicación.</p>
                     <br>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/1VWZGKR1vwtBRr7BOJk-ZrNmxdk3o5AW0/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/13r7rRS4TmQhcqQgN5sQ6DvvIVYRwjYIE/view?usp=sharingtarget"="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
